--- a/index.html
+++ b/index.html
@@ -13,19 +13,11 @@
     <div class="carousel-container">
         <div class="carousel-main">
             <div class="arrow-group">
-                <a href="" class="prev" onclick="changeSlide(-1)">&#10094;</a>
-                <a href="" class="next" onclick="changeSlide(1)">&#10095;</a>
+                <div  class="prev" onclick="changeSlide(-1)">&#10094;</div>
+                <div  class="next" onclick="changeSlide(1)">&#10095;</div>
             </div>
             <div class="img-container">    
-                <div class="display-img">
-                    <img src="images/xps-2L-0vnCnzcU-unsplash.jpg" alt="">
-                </div>
-                <div class="display-img">
-                    <img src="images/xps-g2E2NQ5SWSU-unsplash.jpg" alt="">
-                </div> 
-                <div class="display-img">
-                    <img src="images/xps-TxXuh_hAFd8-unsplash.jpg" alt="">
-                </div>   
+                <img src="images/slide1.jpg" alt="" id="display-img">  
             </div>
         </div>
         <div class="nav-group">
